--- a/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_8/excel/excel.interfaces.nameditemloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="5f788-101">表示单元格区域或值的定义名称。</span><span class="sxs-lookup"><span data-stu-id="5f788-101">Represents a defined name for a range of cells or value.</span></span> <span data-ttu-id="5f788-102">名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。</span><span class="sxs-lookup"><span data-stu-id="5f788-102">Names can be primitive named objects (as seen in the type below), range object, or a reference to a range.</span></span> <span data-ttu-id="5f788-103">此对象可用于获取与名称相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="5f788-103">This object can be used to obtain range object associated with names.</span></span>
+      表示单元格区域或值的定义名称。 名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。 此对象可用于获取与名称相关的 range 对象。
 
-      <span data-ttu-id="5f788-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.NamedItemLoadOptions
     fullName: Excel.Interfaces.NamedItemLoadOptions
     langs:
@@ -24,7 +24,7 @@ items:
       - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
       - 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#$all:member'
-    summary: '<span data-ttu-id="5f788-105">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="5f788-105">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="5f788-106">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="5f788-106">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="5f788-107">).</span><span class="sxs-lookup"><span data-stu-id="5f788-107"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -37,9 +37,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#arrayValues:member'
     summary: |-
-      <span data-ttu-id="5f788-108">返回包含已命名项目的值和类型的对象。</span><span class="sxs-lookup"><span data-stu-id="5f788-108">Returns an object containing values and types of the named item.</span></span>
+      返回包含已命名项目的值和类型的对象。
 
-      <span data-ttu-id="5f788-109">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-109">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: arrayValues
     fullName: arrayValues
     langs:
@@ -52,9 +52,9 @@ items:
           - 'excel!Excel.Interfaces.NamedItemArrayValuesLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#comment:member'
     summary: |-
-      <span data-ttu-id="5f788-110">表示与此名称相关联的注释。</span><span class="sxs-lookup"><span data-stu-id="5f788-110">Represents the comment associated with this name.</span></span>
+      指定与此名称关联的注释。
 
-      <span data-ttu-id="5f788-111">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-111">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: comment
     fullName: comment
     langs:
@@ -67,9 +67,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#formula:member'
     summary: |-
-      <span data-ttu-id="5f788-112">获取或设置的已命名项目的公式。</span><span class="sxs-lookup"><span data-stu-id="5f788-112">Gets or sets the formula of the named item.</span></span> <span data-ttu-id="5f788-113">公式始终以等号 (=) 开头。</span><span class="sxs-lookup"><span data-stu-id="5f788-113">Formula always starts with a '=' sign.</span></span>
+      已命名项的公式。 公式始终以等号 (=) 开头。
 
-      <span data-ttu-id="5f788-114">\[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-114">\[ [API set: ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: formula
     fullName: formula
     langs:
@@ -82,9 +82,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#name:member'
     summary: |-
-      <span data-ttu-id="5f788-115">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="5f788-115">The name of the object.</span></span> <span data-ttu-id="5f788-116">只读。</span><span class="sxs-lookup"><span data-stu-id="5f788-116">Read-only.</span></span>
+      对象的名称。
 
-      <span data-ttu-id="5f788-117">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-117">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -97,9 +97,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#scope:member'
     summary: |-
-      <span data-ttu-id="5f788-118">指明是否将 name 限定到工作簿或特定工作表。</span><span class="sxs-lookup"><span data-stu-id="5f788-118">Indicates whether the name is scoped to the workbook or to a specific worksheet.</span></span> <span data-ttu-id="5f788-119">可能的值为：工作表、工作簿。</span><span class="sxs-lookup"><span data-stu-id="5f788-119">Possible values are: Worksheet, Workbook.</span></span> <span data-ttu-id="5f788-120">只读。</span><span class="sxs-lookup"><span data-stu-id="5f788-120">Read-only.</span></span>
+      指定名称的范围是工作簿还是特定工作表。 可能的值为：工作表、工作簿。
 
-      <span data-ttu-id="5f788-121">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-121">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: scope
     fullName: scope
     langs:
@@ -112,9 +112,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#type:member'
     summary: |-
-      <span data-ttu-id="5f788-122">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="5f788-122">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="5f788-123">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="5f788-123">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="5f788-124">只读。</span><span class="sxs-lookup"><span data-stu-id="5f788-124">Read-only.</span></span>
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="5f788-125">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-125">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -127,9 +127,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#value:member'
     summary: |-
-      <span data-ttu-id="5f788-126">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="5f788-126">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="5f788-127">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="5f788-127">For a named range, will return the range address.</span></span> <span data-ttu-id="5f788-128">只读。</span><span class="sxs-lookup"><span data-stu-id="5f788-128">Read-only.</span></span>
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="5f788-129">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-129">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -142,9 +142,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="5f788-130">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="5f788-130">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="5f788-131">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-131">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -157,9 +157,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheet:member'
     summary: |-
-      <span data-ttu-id="5f788-132">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="5f788-132">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="5f788-133">如果项目的作用域改为工作簿，则会引发错误。</span><span class="sxs-lookup"><span data-stu-id="5f788-133">Throws an error if the item is scoped to the workbook instead.</span></span>
+      返回已命名项限定到的工作表。 如果项目的作用域改为工作簿，则会引发错误。
 
-      <span data-ttu-id="5f788-134">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-134">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
     fullName: worksheet
     langs:
@@ -172,9 +172,9 @@ items:
           - 'excel!Excel.Interfaces.WorksheetLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.NamedItemLoadOptions#worksheetOrNullObject:member'
     summary: |-
-      <span data-ttu-id="5f788-135">返回已命名项限定到的工作表。</span><span class="sxs-lookup"><span data-stu-id="5f788-135">Returns the worksheet on which the named item is scoped to.</span></span> <span data-ttu-id="5f788-136">如果项改为限定到工作簿，将返回 NULL 对象。</span><span class="sxs-lookup"><span data-stu-id="5f788-136">Returns a null object if the item is scoped to the workbook instead.</span></span>
+      返回已命名项限定到的工作表。 如果项改为限定到工作簿，将返回 NULL 对象。
 
-      <span data-ttu-id="5f788-137">\[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="5f788-137">\[ [API set: ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheetOrNullObject
     fullName: worksheetOrNullObject
     langs:
