--- a/docs/docs-ref-autogen/excel/excel/excel.chartlegendformat.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.chartlegendformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ChartLegendFormat#border:member'
@@ -26,7 +26,7 @@ items:
       - 'excel!Excel.ChartLegendFormat#toJSON:member(1)'
   - uid: 'excel!Excel.ChartLegendFormat#border:member'
     summary: |-
-      表示边框格式，包括颜色、线条样式和粗细。 只读。
+      表示边框格式，包括颜色、线条样式和粗细。
 
       \[[API 集： ExcelApi 1.8](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: border
@@ -53,7 +53,7 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.ChartLegendFormat#fill:member'
     summary: |-
-      表示对象的填充格式，包括背景格式信息。 只读。
+      表示对象的填充格式，包括背景格式信息。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: fill
@@ -68,7 +68,7 @@ items:
           - 'excel!Excel.ChartFill:class'
   - uid: 'excel!Excel.ChartLegendFormat#font:member'
     summary: |-
-      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。 只读。
+      表示图表图例的字体属性，例如字体名称、字体大小、颜色等。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
@@ -193,7 +193,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ChartLegendFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -226,7 +226,7 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.ChartBorder:class'
     name: Excel.ChartBorder
@@ -242,7 +242,7 @@ references:
     name: Excel.Interfaces.ChartLegendFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatUpdateData:interface'
     name: Interfaces.ChartLegendFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.ChartLegendFormatData:interface'
     name: Excel.Interfaces.ChartLegendFormatData
