--- a/docs/docs-ref-autogen/excel_1_9/excel/excel.range.yml
+++ b/docs/docs-ref-autogen/excel_1_9/excel/excel.range.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.Range#address:member'
@@ -83,7 +83,6 @@ items:
       - 'excel!Excel.Range#load:member(2)'
       - 'excel!Excel.Range#load:member(3)'
       - 'excel!Excel.Range#merge:member(1)'
-      - 'excel!Excel.Range#moveTo:member(1)'
       - 'excel!Excel.Range#numberFormat:member'
       - 'excel!Excel.Range#numberFormatLocal:member'
       - 'excel!Excel.Range#removeDuplicates:member(1)'
@@ -111,7 +110,7 @@ items:
       - 'excel!Excel.Range#worksheet:member'
   - uid: 'excel!Excel.Range#address:member'
     summary: |-
-      表示 A1 样式的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。 只读。
+      指定 A1 样式中的区域引用。 Address 值将包含工作表引用（例如，"Sheet1！A1： B4 "）。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: address
@@ -126,7 +125,7 @@ items:
           - string
   - uid: 'excel!Excel.Range#addressLocal:member'
     summary: |-
-      以用户语言表示对指定区域的区域引用。 只读。
+      以用户语言指定区域的区域引用。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: addressLocal
@@ -227,7 +226,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Range#cellCount:member'
     summary: |-
-      范围中的单元格数。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。 只读。
+      指定区域中的单元格的数目。 如果单元格数超过 2^31-1 (2,147,483,647)，此 API 返回 -1。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: cellCount
@@ -303,7 +302,7 @@ items:
             - '"All" | "Formats" | "Contents" | "Hyperlinks" | "RemoveHyperlinks"'
   - uid: 'excel!Excel.Range#columnCount:member'
     summary: |-
-      表示区域中的列总数。 只读。
+      指定区域中的总列数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnCount
@@ -333,7 +332,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Range#columnIndex:member'
     summary: |-
-      表示区域中第一个单元格的列编号。 从零开始编制索引。 只读。
+      指定区域中的第一个单元格的列号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: columnIndex
@@ -348,7 +347,7 @@ items:
           - number
   - uid: 'excel!Excel.Range#conditionalFormats:member'
     summary: |-
-      与该范围相交的 ConditionalFormats 的集合。 只读。
+      与该范围相交的 ConditionalFormats 的集合。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: conditionalFormats
@@ -692,7 +691,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Range#format:member'
     summary: |-
-      返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。 只读。
+      返回一个格式对象，其中封装了区域的字体、填充、边框、对齐方式和其他属性。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
@@ -1838,7 +1837,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Range#hidden:member'
     summary: |-
-      表示当前区域中的所有单元格是否隐藏。 只读。
+      表示当前区域中的所有单元格是否隐藏。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: hidden
@@ -1961,7 +1960,7 @@ items:
             - '"Down" | "Right"'
   - uid: 'excel!Excel.Range#isEntireColumn:member'
     summary: |-
-      表示当前区域是否为整列。 只读。
+      表示当前区域是否为整列。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireColumn
@@ -1976,7 +1975,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Range#isEntireRow:member'
     summary: |-
-      表示当前区域是否为整行。 只读。
+      表示当前区域是否为整行。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isEntireRow
@@ -1991,7 +1990,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Range#linkedDataTypeState:member'
     summary: |-
-      表示每个单元格的数据类型状态。 只读。
+      表示每个单元格的数据类型状态。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: linkedDataTypeState
@@ -2127,43 +2126,6 @@ items:
           description: 可选。 如果为 True，则将指定区域中每一行的单元格合并为一个单独的合并单元格。 默认值是 false。
           type:
             - boolean
-  - uid: 'excel!Excel.Range#moveTo:member(1)'
-    summary: |-
-      将单元格的值、格式和公式从当前区域移动到目标区域，替换这些单元格中的旧信息。 如果目标区域小于当前区域，则将自动扩展目标区域。 原始区域区域以外的目标区域中的任何单元格都不会更改。
-
-      \[[API 集： ExcelApiOnline 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    name: moveTo(destinationRange)
-    fullName: moveTo(destinationRange)
-    langs:
-      - typeScript
-    type: method
-    syntax:
-      content: 'moveTo(destinationRange: Range | string): void;'
-      return:
-        type:
-          - void
-        description: |-
-
-
-          #### <a name="examples"></a>示例
-
-          ```typescript
-          // Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/master/samples/excel/42-range/range-copyfrom.yaml
-          await Excel.run(async (context) => {
-              const sheet = context.workbook.worksheets.getItem("Sample");
-              // Place a label in front of the moved data.
-              sheet.getRange("F12").values = [["Moved Range:"]];
-
-              // Move the range from A1:E1 to G12:K12.
-              sheet.getRange("A1:E1").moveTo("G12");
-              await context.sync();
-          });
-          ```
-      parameters:
-        - id: destinationRange
-          description: destinationRange 指定此范围中的信息将移动到的范围。
-          type:
-            - 'excel!Excel.Range#moveTo~0:complex'
   - uid: 'excel!Excel.Range#numberFormat:member'
     summary: |-
       表示给定范围的 Excel 数字格式代码。
@@ -2296,7 +2258,7 @@ items:
             - 'excel!Excel.ReplaceCriteria:interface'
   - uid: 'excel!Excel.Range#rowCount:member'
     summary: |-
-      返回区域中的总行数。 只读。
+      返回区域中的总行数。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowCount
@@ -2326,7 +2288,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Range#rowIndex:member'
     summary: |-
-      返回区域中第一个单元格的行编号。 从零开始编制索引。 只读。
+      返回区域中第一个单元格的行编号。 从零开始编制索引。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: rowIndex
@@ -2439,7 +2401,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.Range#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -2633,7 +2595,7 @@ items:
         description: ''
   - uid: 'excel!Excel.Range#sort:member'
     summary: |-
-      表示当前 range 的区域排序。 只读。
+      表示当前 range 的区域排序。
 
       \[[API 集： ExcelApi 1.2](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sort
@@ -2714,7 +2676,7 @@ items:
           ```
   - uid: 'excel!Excel.Range#text:member'
     summary: |-
-      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。 只读。
+      指定区域的文本值。 文本值与单元格宽度无关。 Excel \# UI 中发生的符号替换不会影响 API 返回的文本值。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
@@ -2840,7 +2802,7 @@ items:
           - 'any[][]'
   - uid: 'excel!Excel.Range#valueTypes:member'
     summary: |-
-      表示每个单元格的数据类型。 只读。
+      指定每个单元格中的数据类型。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: valueTypes
@@ -2855,7 +2817,7 @@ items:
           - 'excel!Excel.Range#valueTypes~0:complex'
   - uid: 'excel!Excel.Range#worksheet:member'
     summary: |-
-      包含当前区域的工作表。 只读。
+      包含当前区域的工作表。
 
       \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: worksheet
@@ -2869,7 +2831,7 @@ items:
         type:
           - 'excel!Excel.Worksheet:class'
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Range#autoFill~0:complex'
     name: Range | string
@@ -2950,7 +2912,7 @@ references:
     name: 'OfficeExtension.ClientResult<CellProperties[][]>'
     fullName: 'OfficeExtension.ClientResult<Excel.CellProperties[][]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -2966,7 +2928,7 @@ references:
     name: 'OfficeExtension.ClientResult<ColumnProperties[]>'
     fullName: 'OfficeExtension.ClientResult<Excel.ColumnProperties[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -2982,7 +2944,7 @@ references:
     name: OfficeExtension.ClientResult<string>
     fullName: OfficeExtension.ClientResult<string>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <string>
@@ -3009,7 +2971,7 @@ references:
     name: 'OfficeExtension.ClientResult<RowProperties[]>'
     fullName: 'OfficeExtension.ClientResult<Excel.RowProperties[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <
@@ -3046,22 +3008,13 @@ references:
         fullName: '[][]'
   - uid: 'excel!Excel.Interfaces.RangeLoadOptions:interface'
     name: Excel.Interfaces.RangeLoadOptions
-  - uid: 'excel!Excel.Range#moveTo~0:complex'
-    name: Range | string
-    fullName: Excel.Range | string
-    spec.typeScript:
-      - uid: 'excel!Excel.Range:class'
-        name: Range
-        fullName: Excel.Range
-      - name: ' | string'
-        fullName: ' | string'
   - uid: 'excel!Excel.RemoveDuplicatesResult:class'
     name: Excel.RemoveDuplicatesResult
   - uid: 'excel!Excel.Range#replaceAll~0:complex'
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -3070,7 +3023,7 @@ references:
     name: Excel.ReplaceCriteria
   - uid: 'excel!Excel.Interfaces.RangeUpdateData:interface'
     name: Interfaces.RangeUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Range#setCellProperties~0:complex'
     name: 'SettableCellProperties[][]'
